Add Eventbrite sync and additional web api
